Closed Bug 380464 Opened 18 years ago Closed 18 years ago

crashed [@ gfxPlatformGtk::SetSurfaceGdkWindow] in case where I used to see bug 263160

Categories

(Core :: Graphics, defect, P5)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta2

People

(Reporter: dbaron, Assigned: vlad)

References

Details

(Keywords: assertion, crash)

Crash Data

Attachments

(2 files)

This morning I crashed while reloading tinderbox, after seeing one of the warnings that typically led to bug 263160. (Although I didn't see the first of the ones that I often see.) Vlad thinks this is a regression from bug 371135. I'll attach the end of my stdout+stderr log, with some irrelevant stuff removed, and with the stacks fixed up with line numbers.
This is being worked in bug 380494.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → DUPLICATE
I'm not so confident that it's the same thing, and it seems like marking a GTK-only bug a duplicate of a Windows-only bug is a bit suspicious. Reopening and marking dependency.
Status: RESOLVED → REOPENED
Depends on: 380494
Resolution: DUPLICATE → ---
Ooops. Sorry, duh! Should have noticed your bug was not windows.
Oh except that although the original patch that was never checked in on that bug was windows only, neither the code that was checked in, nor the followup patch are windows only. So it still could be that the patches there fix this issue also.
For the record, I just saw this in a build pulled Thu May 31 11:02:54 PDT 2007 (and that I'd been running continuously since about 2 hours after that).
Flags: blocking1.9?
Assignee: nobody → vladimir
Status: REOPENED → NEW
Flags: blocking1.9? → blocking1.9+
Keywords: assertion, crash
Summary: crashed in case where I used to see bug 263160 → crashed [@ gfxPlatformGtk::SetSurfaceGdkWindow] in case where I used to see bug 263160
have you seen this since?
dbaron?
I stopped using the browser in a way that would trigger this.
(And note that it may have become a lot harder to trigger if we've become less leaky.)
Priority: -- → P5
So the code that's causing this crash is no longer being used; we can just blow it away. My linux vm is out of commission for the moment, but this should do it.
Attachment #287446 - Flags: review?(pavlov)
Attachment #287446 - Flags: review?(pavlov) → review+
Target Milestone: --- → mozilla1.9 M10
Checking in gfx/thebes/public/gfxPlatformGtk.h; /cvsroot/mozilla/gfx/thebes/public/gfxPlatformGtk.h,v <-- gfxPlatformGtk.h new revision: 1.19; previous revision: 1.18 done Checking in gfx/thebes/src/gfxPlatformGtk.cpp; /cvsroot/mozilla/gfx/thebes/src/gfxPlatformGtk.cpp,v <-- gfxPlatformGtk.cpp new revision: 1.29; previous revision: 1.28 done Checking in widget/src/gtk2/nsWindow.cpp; /cvsroot/mozilla/widget/src/gtk2/nsWindow.cpp,v <-- nsWindow.cpp new revision: 1.235; previous revision: 1.234 done
Status: NEW → RESOLVED
Closed: 18 years ago18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Depends on: 403481
This caused the huge memory leak reported in bug 403481.
Crash Signature: [@ gfxPlatformGtk::SetSurfaceGdkWindow]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: