Bug 380464 - "crashed [@ gfxPlatformGtk::SetSurfaceGdkWindow] in case where I used to see bug 263160" [p=vlad r=stuart a=blocking1.9+]